tests/paczka1/fuzzy1/54599147.err
Error in line 7: 1Uh S650 73,4
Error in line 19: 47qE4smDyLl S650 27,9
Error in line 24: ODlja A6 53,3
Error in line 30: E8GNh A6 -1,7
Error in line 28: ODlja A111 42,0
Error in line 31: prbna A6 96,4
Error in line 23: ZvJJf1L S659 155,0
